# cpp-opengl-scene-editor

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEVLOG.md  README.md  TODO.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
shaders/: default.frag  default.vert
src/: Application.cpp  Application.h  BatchParentCommand.cpp  BatchParentCommand.h  Camera.cpp  Camera.h  CreateCommand.cpp  CreateCommand.h  DeleteCommand.cpp  DeleteCommand.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  PrimitiveGenerator.h  Scene.cpp  Scene.h  SceneBuilder.h  Shader.cpp  Transform.h  TransformCommand.cpp  TransformCommand.h  main.cpp
src/Assets/: MeshLoader.cpp  MeshLoader.h
src/Commands/: Command.h  TextureCommand.cpp  TextureCommand.h
src/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  config.h
src/Graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  PrimitiveGenerator.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Scene/: GameObject.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h
